--- a/trunk/DevCpp/Makefile.win
+++ b/trunk/DevCpp/Makefile.win
@@ -5,8 +5,8 @@ CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
 RES  = tanks_private.res
-OBJ  = ../main_h.o ../sprite.o ../collidable.o ../point.o ../collision.o $(RES)
-LINKOBJ  = ../main_h.o ../sprite.o ../collidable.o ../point.o ../collision.o $(RES)
+OBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o $(RES)
+LINKOBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -mwindows -lalleg  
 INCS =  -I"C:/Dev-Cpp/include" 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
@@ -26,20 +26,32 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o "tanks.exe" $(LIBS)
 
-../main_h.o: ../main_h.cpp
-	$(CPP) -c ../main_h.cpp -o ../main_h.o $(CXXFLAGS)
+../main.o: ../main.cpp
+	$(CPP) -c ../main.cpp -o ../main.o $(CXXFLAGS)
 
 ../sprite.o: ../sprite.cpp
 	$(CPP) -c ../sprite.cpp -o ../sprite.o $(CXXFLAGS)
 
-../collidable.o: ../collidable.cpp
-	$(CPP) -c ../collidable.cpp -o ../collidable.o $(CXXFLAGS)
+../map_object.o: ../map_object.cpp
+	$(CPP) -c ../map_object.cpp -o ../map_object.o $(CXXFLAGS)
 
 ../point.o: ../point.cpp
 	$(CPP) -c ../point.cpp -o ../point.o $(CXXFLAGS)
 
 ../collision.o: ../collision.cpp
 	$(CPP) -c ../collision.cpp -o ../collision.o $(CXXFLAGS)
+
+../tank.o: ../tank.cpp
+	$(CPP) -c ../tank.cpp -o ../tank.o $(CXXFLAGS)
+
+../rect.o: ../rect.cpp
+	$(CPP) -c ../rect.cpp -o ../rect.o $(CXXFLAGS)
+
+../box.o: ../box.cpp
+	$(CPP) -c ../box.cpp -o ../box.o $(CXXFLAGS)
+
+../timer.o: ../timer.cpp
+	$(CPP) -c ../timer.cpp -o ../timer.o $(CXXFLAGS)
 
 tanks_private.res: tanks_private.rc 
 	$(WINDRES) -i tanks_private.rc --input-format=rc -o tanks_private.res -O coff 
