--- a/trunk/DevCpp/Makefile.win
+++ b/trunk/DevCpp/Makefile.win
@@ -5,9 +5,9 @@ CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
 RES  = tanks_private.res
-OBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o $(RES)
-LINKOBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -mwindows -lalleg  
+OBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o ../tank_turret.o ../bullet.o $(RES)
+LINKOBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o ../tank_turret.o ../bullet.o $(RES)
+LIBS =  -L"C:/Dev-Cpp/lib" -lalleg  
 INCS =  -I"C:/Dev-Cpp/include" 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
 BIN  = tanks.exe
@@ -52,6 +52,12 @@ $(BIN): $(OBJ)
 
 ../timer.o: ../timer.cpp
 	$(CPP) -c ../timer.cpp -o ../timer.o $(CXXFLAGS)
+
+../tank_turret.o: ../tank_turret.cpp
+	$(CPP) -c ../tank_turret.cpp -o ../tank_turret.o $(CXXFLAGS)
+
+../bullet.o: ../bullet.cpp
+	$(CPP) -c ../bullet.cpp -o ../bullet.o $(CXXFLAGS)
 
 tanks_private.res: tanks_private.rc 
 	$(WINDRES) -i tanks_private.rc --input-format=rc -o tanks_private.res -O coff 
