--- a/trunk/DevCpp/Makefile.win
+++ b/trunk/DevCpp/Makefile.win
@@ -7,7 +7,7 @@ WINDRES = windres.exe
 RES  = tanks_private.res
 OBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o ../tank_turret.o ../bullet.o $(RES)
 LINKOBJ  = ../main.o ../sprite.o ../map_object.o ../point.o ../collision.o ../tank.o ../rect.o ../box.o ../timer.o ../tank_turret.o ../bullet.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -lalleg  
+LIBS =  -L"C:/Dev-Cpp/lib" -mwindows -lalleg  
 INCS =  -I"C:/Dev-Cpp/include" 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
 BIN  = tanks.exe
